# oplog

./: .gitignore  404.html  CONTRIBUTING.md  LICENSE  README.md  index.html  justfile  mkdocs.yml  oplogs.csv  pyproject.toml  requirements-dev.txt  requirements.txt  sandbox.py  setup.cfg  sitemap.xml
.github/workflows/: build.yml  ci.yml  core_build.yml  coverage.yml  docs.yml  lint.yml  package_build.yml  package_publish.yml  security_check.yml  test.yml
alternatives/: index.html
assets/: find_nth_prime.mov
contribution/active_backlog/: index.html
contribution/contribution/: index.html
contribution/development/: index.html
demos/find_nth_prime/: index.html
demos/fluent_calculator/: index.html
demos/tbd/: index.html
docs/: .pages  active_backlog.md  alternatives.md  common_concepts.md  contribution.md  development.md  examples.md  feature_list.md  getting_started.md  index.md  page2.md
docs/contribution/: active_backlog.md  contribution.md  development.md
docs/demos/: find_nth_prime.md  fluent_calculator.md  tbd.md
docs/tutorial/: config.md  examples.md  operated.md  operation.md  operation_properties.md  operation_serialization.md  progressable.md  progressable_operations.md  property_groups.md
examples/fluent_calculator_demo/: main.py  pytest.ini  test_fluent_calculator.py
examples/prime_finder_demo/: find_nth_prime.py  find_nth_prime_spinner.py  find_prime.py
examples/server_demo/: main.py  requirements.txt  server.py
oplog/: __init__.py  constants.py  exceptions.py  operated.py  operation.py  operation_handler.py  operation_progress.py  operation_step.py  oplog_csv_formatter.py  pretty_operation_formatter.py  spinner.py  spinner_templates.py  verbose_oplog_line_formatter.py
oplog/core/: constants.py  exceptions.py  operated.py  operation.py  operation_log_filter.py  pretty_operation_formatter.py
oplog/formatters/: __init__.py  base_operation_formatter.py  csv_operation_formatter.py  oplog_csv_formatter.py  (+3 more)
scripts/: single_file_coverage_check.py
search/: search_index.json
(+24 files in other folders)
