[metadata]
name = op-log
version = 0.1
author = Ori Bar-ilan
description = Modern logging library for Python applications, focused on object-oriented, production-ready logging.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/oribarilan/oplog
license = MIT

[options]
packages = find:

[options.packages.find]
include = oplog*
